--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2819,4 +2819,16 @@
   <data name="Hours_word" xml:space="preserve">
     <value>Hours</value>
   </data>
+  <data name="Comment_or_Notes_Word" xml:space="preserve">
+    <value>Comment or Notes</value>
+  </data>
+  <data name="IPV4_Address_word" xml:space="preserve">
+    <value>IPV4 Address</value>
+  </data>
+  <data name="MAC_Address_word" xml:space="preserve">
+    <value>MAC Address</value>
+  </data>
+  <data name="Banned_word" xml:space="preserve">
+    <value>Bannedviewe</value>
+  </data>
 </root>
