--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2831,4 +2831,7 @@
   <data name="Banned_word" xml:space="preserve">
     <value>Bannedviewe</value>
   </data>
+  <data name="Setup_Wordpress" xml:space="preserve">
+    <value>Set Up WordPress database</value>
+  </data>
 </root>
