Enable Gloebit name

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2982,4 +2982,7 @@
   <data name="GLBShowWelcomeMessage_text" xml:space="preserve">
     <value>Show Gloebits welcome message when entering a region?</value>
   </data>
+  <data name="EnableGloebit_word" xml:space="preserve">
+    <value>Enable Gloebit</value>
+  </data>
 </root>
