--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -1618,7 +1618,7 @@
     <value>Print</value>
   </data>
   <data name="Reserve_Password" xml:space="preserve">
-    <value>Reserve your DYN DNS name. This is a password for your name.</value>
+    <value>Reserve your DYN DNS name. This is a password for your Grid name.</value>
   </data>
   <data name="flag_norway" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flag_norway.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -2984,5 +2984,8 @@
   </data>
   <data name="EnableGloebit_word" xml:space="preserve">
     <value>Enable Gloebit</value>
+  </data>
+  <data name="DNSAlt" xml:space="preserve">
+    <value>Alternate Name such as www.outworldz.com vs. outworldz.com. Can be an old grid name you wish to continute to use.</value>
   </data>
 </root>
