--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2988,4 +2988,10 @@
   <data name="DNSAlt" xml:space="preserve">
     <value>Alternate Name such as www.outworldz.com vs. outworldz.com. Can be an old grid name you wish to continute to use.</value>
   </data>
+  <data name="edge" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edge.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="microsoft_edge" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\microsoft-edge.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
