--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2994,4 +2994,25 @@
   <data name="microsoft_edge" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\microsoft-edge.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AdministerJoomla_word" xml:space="preserve">
+    <value>Administer</value>
+  </data>
+  <data name="Installed_word" xml:space="preserve">
+    <value>Installed</value>
+  </data>
+  <data name="InstallingJoomla_word" xml:space="preserve">
+    <value>Installing Joomla</value>
+  </data>
+  <data name="Installing_word" xml:space="preserve">
+    <value>Installing. Please wait ...</value>
+  </data>
+  <data name="InstallJoomla_word" xml:space="preserve">
+    <value>Install</value>
+  </data>
+  <data name="JOpensimSettings" xml:space="preserve">
+    <value>JOpensim Settings</value>
+  </data>
+  <data name="ViewJoomla_word" xml:space="preserve">
+    <value>View</value>
+  </data>
 </root>
