--- a/Updater_Src/Updater/My Project/Resources.resx
+++ b/Updater_Src/Updater/My Project/Resources.resx
@@ -121,4 +121,7 @@
   <data name="copper" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\copper.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Ionic_Zip" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
