--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -216,7 +216,7 @@
     <value>Publish Grid to Hyperica.com</value>
   </data>
   <data name="OneAvatar" xml:space="preserve">
-    <value>There is one avatar</value>
+    <value>There is one avatar in</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>Reading Region files</value>
