Add RemoteAdminPort, FirstXMLRegionPort to UPNP and firewall

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3042,4 +3042,10 @@
   <data name="Z" xml:space="preserve">
     <value>Z</value>
   </data>
+  <data name="Diag_TCP_is_set_word" xml:space="preserve">
+    <value>Diagnostics TCP Port is set</value>
+  </data>
+  <data name="Grid_Remote_is_set_word" xml:space="preserve">
+    <value>Remote Admin Port is set</value>
+  </data>
 </root>
