--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3078,4 +3078,10 @@
   <data name="document_text" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\document_text.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SearchOptions_word" xml:space="preserve">
+    <value>Search Options</value>
+  </data>
+  <data name="Update_word" xml:space="preserve">
+    <value>Update</value>
+  </data>
 </root>
