Fix Joomla URLS
Signed-off-by: Fred Beckhusen <fred@mitsi.com>

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -802,7 +802,7 @@
     <value>Admin Password</value>
   </data>
   <data name="Restore_word" xml:space="preserve">
-    <value>Restore?</value>
+    <value>Restore From Backup</value>
   </data>
   <data name="Bullet_Physics_word" xml:space="preserve">
     <value>Bullet physics</value>
