--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3092,4 +3092,7 @@
     <value>Automatic Site Map</value>
     <comment>new</comment>
   </data>
+  <data name="Passwordtooshort_word" xml:space="preserve">
+    <value>Password is too short</value>
+  </data>
 </root>
