--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3098,4 +3098,12 @@
   <data name="table" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\table.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Crash_Message" xml:space="preserve">
+    <value>The system has crashed and must exit.  What happened just before it crashed?</value>
+    <comment>new</comment>
+  </data>
+  <data name="Send_and_quit_word" xml:space="preserve">
+    <value>Send and Quit?</value>
+    <comment>new</comment>
+  </data>
 </root>
