delete tmp folder

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3106,4 +3106,7 @@
     <value>Send and Quit?</value>
     <comment>new</comment>
   </data>
+  <data name="DeleteTmp_word" xml:space="preserve">
+    <value>Delete tmp folder</value>
+  </data>
 </root>
