--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3113,4 +3113,7 @@
     <value>Group Port</value>
     <comment>new</comment>
   </data>
+  <data name="cube_green_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cube_green_new.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
